# huozi-rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_EN.md
assets/: PingFang.ttc
docs/: parser.md
examples/: buzz_info.rs  face_info.rs  texture.rs
examples/render/: defaults.rs  fonts.rs  main.rs  mvp.rs  shader.wgsl  texture.rs  ui.rs
examples/render/ui/: color_picker.rs  grid.rs  switch.rs
src/: charsets.rs  color.rs  constant.rs  font_extractor.rs  glyph.rs  glyph_vertices.rs  huozi.rs  layout.rs  lib.rs  main.rs  main_rusttype.rs  parser.rs  sdf.rs  textstyle.rs
src/font_extractor/: ab_glyph.rs  common.rs  font_kit.rs  fontdue.rs
src/glyph/: ab_glyph.rs  common.rs  fontdue.rs  rusttype.rs
src/layout/: color.rs  color_space.rs  glyph_span.rs  layout_style.rs  text_run.rs  text_section.rs  text_span.rs  text_style.rs  vertex.rs
src/parser/: elements_to_spans.rs  parse_elements.rs  segment.rs  source_range.rs  text_run.rs  text_span.rs  text_style.rs
tests/: parse.rs  parser_custom_symbols.rs
