[package]
description = "A simple typography engine for CJK languages, especially designed for game rich-text."
edition = "2021"
exclude = ["examples"]
license = "Apache-2.0"
name = "huozi"
repository = "https://github.com/Icemic/huozi-rs"
version = "0.15.0"

[features]
ab_glyph = ["dep:ab_glyph"]
charsets = []
default = ["ab_glyph", "wgpu", "charsets", "sdf", "layout"]
font_kit = ["dep:font-kit", "dep:pathfinder_geometry"]
fontdue = ["dep:fontdue"]
layout = []
sdf = []
wgpu = ["dep:wgpu"]

[dependencies]
ab_glyph = {version = "0.2", optional = true}
anyhow = "1"
bytemuck = {version = "1.4", features = ["derive"]}
csscolorparser = {version = "0.7", features = ["serde"]}
font-kit = {version = "0.14", optional = true}
fontdue = {version = "0.9.2", optional = true}
image = {version = "0.25", default-features = false}
log = "0.4"
lru = "0.16.0"
nom = {version = "8.0"}
nom-language = {version = "0.1"}
nom_locate = {version = "5.0.0", features = ["runtime-dispatch-simd"]}
pathfinder_geometry = {version = "0.5.1", optional = true}
serde = {version = "1", features = ["derive"]}
wgpu = {version = "27.0", optional = true}

[dev-dependencies]
cfg-if = "1"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
env_logger = "0.11"
image = {version = "0.25", default-features = false, features = ["png"]}
pollster = "0.4"
rustybuzz = "0.20"
ttf-parser = "0.25"
wgpu = "27.0"
winit = "0.30.12"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = ["Document", "Window", "Element"]}
wgpu = {version = "27.0", features = ["webgl"]}

[target.'cfg(target_os = "android")'.dev-dependencies]
android_logger = "0.15"
winit = {version = "0.30.12", features = ["android-game-activity"]}

[[example]]
name = "render"
path = "examples/render/main.rs"

[[example]]
crate-type = ["cdylib"]
name = "render-lib"
path = "examples/render/main.rs"
